[project]
name = "klaudiusz"
version = "0.1.0"
description = "Kronikarz Klaudiusz: Discord <-> LLM bridge (newsletter + research log) over the official bot REST API"
requires-python = ">=3.11,<3.13"
dependencies = [
    "httpx>=0.27",
]

[project.scripts]
klaudiusz = "klaudiusz.cli:main"

[dependency-groups]
dev = ["pytest>=8.0", "respx>=0.21", "ruff>=0.14.1"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["klaudiusz"]
